Added spelling corrections and replaced newInstance() with getDeclaredConstructor().newInstance()